name:                qdb
version:             0.1
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: src/sysgenlex.x
                    src/sysgenparse.y

executable qdb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       array,
                       split
  build-tools:         happy, 
                       alex
  other-modules:       Sysgenlex
                       Sysgenparse
                       Treedef
                       Treepr
                       Eqpr
