name:                tdb
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable tdb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       array,
                       split,
                       containers
